添加梯度下降

--- a/gradient/gradient.html
+++ b/gradient/gradient.html
@@ -18,7 +18,7 @@ svg {
     <body>
 			<svg id=zero width=300 height =300 ></svg>
 			<svg id=first width=300 height =300 ></svg>
-        <script src="../temp/d3.min.js"></script>
+        <script src="https://cdn.bootcss.com/d3/3.5.17/d3.min.js"></script>
 		<script src="../share/axis.js"></script>
         <script>
 					svg =	d3.select("svg[id=zero]")  //损失函数坐标系
