--- a/gradient/gradient.html
+++ b/gradient/gradient.html
@@ -16,21 +16,31 @@ svg {
 }
 </style>
     <body>
-			<svg id=zero width=300 height =300 ></svg>
-			<svg id=first width=300 height =300 ></svg>
+		<svg id=zero width=300 height =300 ></svg>
+		<svg id=first width=300 height =300 ></svg>
+			
+			<table>
+			  <tr>
+				<th>x</th>
+				<th>y</th>
+				<th>θ</th>
+			  </tr>
+			</table>
+			
         <script src="https://cdn.bootcss.com/d3/3.5.17/d3.min.js"></script>
 		<script src="../share/axis.js"></script>
         <script>
+			tab=d3.select("table");
 					svg =	d3.select("svg[id=zero]")  //损失函数坐标系
-					xdomain = [-100,100]
-					ydomain = [-5000,32000]
+					xdomain = [-35,35]
+					ydomain = [-450,1650]
 					temp= axix(svg,xdomain,ydomain)
 					xlinear = temp[0]
 					ylinear =temp[1]
 					
 					svg1 = d3.select("svg[id=first]")  //拟合直线坐标系
-					x1domain = [-1,10]
-					y1domain = [-10,100]
+					x1domain = [-1.5,5.5]
+					y1domain = [-1.5,5.5]
 					temp= axix(svg1,x1domain,y1domain)
 					x1linear = temp[0]
 					y1linear =temp[1]
@@ -67,16 +77,24 @@ svg {
 							.attr('cx',xlinear(data.cx))
 							.attr('cy',ylinear(data.cy))
 							.attr('r',2);
-						svg1.select("line[class = temp]").remove();
+						// svg1.select("line[class = temp]").remove();
 						svg1.append("line")
 							.attr({
 								x1:x1linear(0),
 								y1:y1linear(0),
 								x2:x1linear(10),
 								y2:y1linear(data.cx*10),
-								stroke:"black",
+								stroke:"rgba(0,0,0,"+(1-data.cx/23)*0.5+")",
+								alpha:0.4,
 								class:"temp",
 							})
+						temp=[data.cx,data.cy,data.cx]
+						tab.append("tr")
+							.selectAll("td")
+							.data(temp)
+							.enter()
+							.append("td")
+							.text((d)=>d.toFixed(2))
 						});
 					});	
         </script>
