--- a/PCA/pca_linear.html
+++ b/PCA/pca_linear.html
@@ -24,164 +24,56 @@ svg {
 <script type="text/javascript">
 
 
-m =[[-1,-2],[-1,0],[0,0],[2,1],[0,1]]
-m_T=numeric.transpose(m)
-cov = numeric.dot(m_T,m)
-cov = numeric.mul(0.2,cov)
+m =[[3,1],[1,1],[1,0],[0,0],[-1,0],[0,-1],[-3,-1]]  //原始点
+m_T=numeric.transpose(m) //转置
+cov = numeric.dot(m_T,m) //协方差矩阵
+cov = numeric.mul(0.2,cov) //协方差矩阵
 
 
-a = numeric.eig(cov)
-eig = numeric.neg(a.E.x)
-eig1 = [eig[0][0],eig[1][0]]
-eigv = a.lambda.x
+a = numeric.eig(cov)   //协方差矩阵特征值，就是原始点投射后的直线
+eig = numeric.neg(a.E.x)  //与numpy的结果保持一致
+// eig1 = [eig[0][0],eig[1][0]]  //获得第一个特征向量
+// eig1 = [eig[0][1],eig[1][1]]  //获得第二个特征向量
+
+// eig1 = [Math.sin(1.3),Math.cos(1.3)]
+eig1 = [0,1]
 
 m_p = numeric.dot(eig1,m_T)  //计算投影后的长度
-m2 = m.map((d,i)=>numeric.mul(m_p[i],d))  //计算投影后的坐标
+m2 = m_p.map(d=>[eig1[0]*d,eig1[1]*d])  //计算投影后的坐标
 
 m_all = d3.zip(m,m2)
-//特征基的变化长度
-j_n = 10
 
 svg=d3.select('svg')
 width=svg.attr('width')
 height=svg.attr('height')
-
-var xs = d3.scale.linear()
-        .domain([-10, 10])
-        .range([0, width]);
-		
-var ys = d3.scale.linear()
-        .domain([-10, 10])
-        .range([height,0]);
-
-//创建水平线和垂直线
-ten=new Array(20).fill(10)
-ten_n=new Array(20).fill(-10)
-other = d3.range(-10,11)		
-//添加横坐标
-hx1y1=d3.zip(ten_n,other)
-hx1y1=d3.transpose(hx1y1)
-hx1y1=numeric.dot(m,hx1y1)
-
-hx2y2=d3.zip(ten,other)
-hx2y2=d3.transpose(hx2y2)
-hx2y2=numeric.dot(m,hx2y2)
-
-hxy=hx1y1.concat(hx2y2)
-hxy=d3.transpose(hxy)
-
-hl0 = d3.zip(ten_n,other,ten,other)
-hl1=hxy
-hl=d3.zip(hl0,hl1)
-
-svg.selectAll('line[class=hl]') //原始横坐标
-	.data(hl)
-	.enter()
-	.append('line')  //添加y轴
-	.attr({
-		"x1":d=>xs(d[0][0]),
-		"y1":d=>ys(d[0][1]),
-		"x2":d=>xs(d[0][2]),
-		"y2":d=>ys(d[0][3]),
-		"stroke":'black',
-		'stroke-dasharray':"2,2",
-		"class":'hl',
-		'opacity':function(d,i){if(i==10){return 1}else{return 0.2}},
-	})
-	
-//添加纵坐标	
-lx1y1=d3.zip(other,ten_n)
-lx1y1=d3.transpose(lx1y1)
-lx1y1=numeric.dot(m,lx1y1)
-
-lx2y2=d3.zip(other,ten)
-lx2y2=d3.transpose(lx2y2)
-lx2y2=numeric.dot(m,lx2y2)
-
-lxy=lx1y1.concat(lx2y2)
-lxy=d3.transpose(lxy)
-
-vl0 = d3.zip(other,ten_n,other,ten)
-vl1=lxy
-vl=d3.zip(vl0,vl1)
-	
-svg.selectAll('line[class=vl]') //原始纵坐标
-	.data(vl)
-	.enter()
-	.append('line')  //添加y轴
-	.attr({
-		"x1":d=>xs(d[0][0]),
-		"y1":d=>ys(d[0][1]),
-		"x2":d=>xs(d[0][2]),
-		"y2":d=>ys(d[0][3]),
-		"stroke":'black',
-		'stroke-dasharray':"2,2",
-		"class":'vl',
-		'opacity':function(d,i){if(i==10){return 1}else{return 0.2}},
-	})
+temp= axix(svg,[-6,6],[-6,6])  //构建坐标系
+xs = temp[0]
+ys = temp[1]
 
 
 //添加特征基	
-svg.append('line')
+svg.append('line')  //投影方差大的直线
 	.attr({
-		"x1":xs(0),
-		'y1':ys(0),
-		'x2':xs(eig[0][0]),
-		'y2':ys(eig[1][0]),
+		"x1":xs(-eig1[0]*10),
+		'y1':ys(-eig1[1]*10),
+		'x2':xs(eig1[0]*10),
+		'y2':ys(eig1[1]*10),
 		"stroke":'black',
 		'class':'eig'
 	})
-	.transition()
-	.duration(2500)
-	.attr({
-		"x1":xs(0),
-		'y1':ys(0),
-		'x2':xs(j_n*eigv[0]*eig[0][0]),
-		'y2':ys(j_n*eigv[0]*eig[1][0]),
-		"stroke":'black'		
-	})
-svg.append('line')
-	.attr({
-		"x1":xs(0),
-		'y1':ys(0),
-		'x2':xs(-eig[0][0]),
-		'y2':ys(-eig[1][0]),
-		"stroke":'black',
-		'class':'eig'
-	})
-	.transition()
-	.duration(2500)
-	.attr({
-		"x1":xs(0),
-		'y1':ys(0),
-		'x2':xs(-j_n*eigv[0]*eig[0][0]),
-		'y2':ys(-j_n*eigv[0]*eig[1][0]),
-		"stroke":'black'		
-	})
-
-svg.append('line')
-	.attr({
-		"x1":xs(0),
-		'y1':ys(0),
-		'x2':xs(eig[0][1]),
-		'y2':ys(eig[1][1]),
-		"stroke":'black'
-	})
-	.transition()
-	.duration(2500)
-	.attr({
-		"x1":xs(0),
-		'y1':ys(0),
-		'x2':xs(j_n*eigv[1]*eig[0][1]),
-		'y2':ys(j_n*eigv[1]*eig[1][1]),
-		"stroke":'black',
-		'class':"eig"
-	})
-
+// svg.append('line')  //投影方差小的直线
+// 	.attr({
+// 		"x1":xs(-eig[0][1]*10),
+// 		'y1':ys(-eig[1][1]*10),
+// 		'x2':xs(eig[0][1]*10),
+// 		'y2':ys(eig[1][1]*10),
+// 		"stroke":'black',
+// 		'class':'eig'
+// 	})
 
 // 添加点
 
-svg.selectAll('circle[class=c1]')
+svg.selectAll('circle[class=c1]')  //原始点
 	.data(m)
 	.enter()
 	.append('circle')
@@ -191,8 +83,8 @@ svg.selectAll('circle[class=c1]')
 		'r':2,
 		"class":'c1'
 	})
-
-svg.selectAll('circle[class=c2]')
+// 
+svg.selectAll('circle[class=c2]')  //投影点
 	.data(m2)
 	.enter()
 	.append('circle')
@@ -200,21 +92,25 @@ svg.selectAll('circle[class=c2]')
 		"cx":d=>xs(d[0]),
 		"cy":d=>ys(d[1]),
 		'r':2,
-		"class":'c2'
+		"class":'c2',
+		'fill':'white',
+		'stroke':'black',
+		'stroke_width':'1'
 	})
-// svg.selectAll('line[class=m_p]') //原始纵坐标
-// 	.data(m_all)
-// 	.enter()
-// 	.append('line')  //添加y轴
-// 	.attr({
-// 		"x1":d=>xs(d[0][0]),
-// 		"y1":d=>ys(d[0][1]),
-// 		"x2":d=>xs(d[1][0]),
-// 		"y2":d=>ys(d[1][1]),
-// 		"stroke":'black',
-// 		'stroke-dasharray':"2,2",
-// 		"class":'m_p',
-// 	})
+	
+svg.selectAll('line[class=project]')
+	.data(m_all)
+	.enter()
+	.append('line')
+	.attr({
+		"x1":d=>xs(d[0][0]),
+		'y1':d=>ys(d[0][1]),
+		'x2':d=>xs(d[1][0]),
+		'y2':d=>ys(d[1][1]),
+		"stroke":'black',
+		'stroke-dasharray':"2,2",
+		'class':'project'
+	})
 </script>
 </body>
 </html>
